<resources>
    <string name="app_name">Foodlife</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logout">logout</string>
    <string name="SPOONACULAR_KEY">f1bb97f5a6b141f1b5f8e17a2eba1296</string>
    <string name="meal_type">Meal Type</string>
    <string name="glutten_free">Glutten Free</string>
    <string name="lacto_vegetarian">Lacto-Vegetarian</string>
    <string name="ketogenic">Ketogenic</string>
    <string name="vegeterian">Vegeterian</string>
    <string name="ovo_vegetarian">Ovo-Vegetarian</string>
    <string name="low_fodmap">Low FODMAP</string>
    <string name="paleo">Paleo</string>
    <string name="pescetarian">Pescetarian</string>
    <string name="vegan">Vegan</string>
    <string name="whole30">Whole30</string>
    <string name="primal">Primal</string>
    <string name="breakfast">Breakfast</string>
    <string name="appetizer">Appetizer</string>
    <string name="main_course">main course</string>
    <string name="sidedish">sidedish</string>
    <string name="dessert">dessert</string>
    <string name="salad">salad</string>
    <string name="soup">soup</string>
    <string name="bread">bread</string>
    <string name="beverage">beverage</string>
    <string name="sauce">sauce</string>
    <string name="marinade">marinade</string>
    <string name="fingerfood">fingerfood</string>
    <string name="snack">snack</string>
    <string name="drink">drink</string>
    <string name="diet_type">Diet Type</string>
    <string name="apply">Apply</string>
    <string name="textview">TextView</string>
    <string name="cheap">Cheap</string>
    <string name="healthy">Healthy</string>
    <string name="diary_free">Diary Free</string>
    <string name="gluten_free">Gluten Free</string>
    <string name="Vegan">Vegan</string>
    <string name="vegetarian">Vegetarian</string>
    <string name="_100">100</string>
    <string name="title">Title</string>
    <string name="name">Name</string>
    <string name="facebook_app_id">1384477938741883</string>
    <string name="fb_login_protocol_scheme">fb1384477938741883</string>
    <string name="facebook_client_token">ca0317c0efea871a3009e4d445cc039f</string>
    <string name="recipes_suggested_by_ingredients">Recipes suggested by Ingredients</string>
    <string name="email" />
    <string name="user_gmail_com" />
    <string name="david" />
    <string name="i_am_a_vegetarian" />
    <string name="signup">SignUp</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="favorite">Favorite</string>
    <string name="fridge">Fridge</string>
    <string name="search">Search</string>
    <string name="explore">explore</string>
    <string name="profile">Profile</string>
    <string name="recommended_recipes_based_on_ingredients_in_the_fridge">Recommended Recipes based on Ingredients in the fridge</string>
    <string name="recommended_italian_recipes">Recommended Italian Recipes</string>
    <string name="recommended_american_recipes">Recommended American Recipes</string>
    <string name="recommended_chinese_recipes">Recommended Chinese Recipes</string>
    <string name="recommended_breakfast_recipes">Recommended Breakfast Recipes</string>
    <string name="recipe_name">Recipe Name</string>
    <string name="like_recipes_so_they_can_be_added_here">Like recipes so they can be added here</string>
    <string name="login">LOGIN</string>
    <string name="sign_up">SIGN UP</string>
    <string name="or">OR</string>
    <string name="image">image</string>
</resources>