<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.OverviewFragment">

    <ImageView
        android:id="@+id/ivImage"
        android:layout_width="0dp"
        android:layout_height="250dp"
        android:layout_marginBottom="17dp"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:srcCompat="@tools:sample/avatars" />

    <ImageView
        android:id="@+id/like_imageView"
        android:layout_width="130dp"
        android:layout_height="146dp"
        android:layout_marginStart="300dp"
        android:layout_marginTop="178dp"
        android:layout_marginBottom="179dp"
        android:background="@drawable/ic_heart_button"
        app:layout_constraintBottom_toTopOf="@+id/scrollView2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/ivImage"
        app:layout_constraintVertical_bias="0.435" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="267dp"
        android:layout_marginEnd="12dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/title_textView"
            android:layout_width="387dp"
            android:layout_height="wrap_content"
            android:fontFamily="Courgette"
            android:text="@string/title"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp">

            <ImageView
                android:id="@+id/vegetarian_imageView"
                android:layout_width="33dp"
                android:layout_height="27dp"
                android:src="@drawable/ic_check"
                app:tint="@color/black" />

            <TextView
                android:id="@+id/vegetarian_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="35dp"
                android:text="@string/vegetarian"
                tools:layout_editor_absoluteX="49dp"
                tools:layout_editor_absoluteY="302dp" />

            <ImageView
                android:id="@+id/vegan_imageView"
                android:layout_width="32dp"
                android:layout_height="27dp"
                android:layout_marginStart="130dp"
                android:src="@drawable/ic_check"
                app:tint="@color/black"
                tools:layout_editor_absoluteX="12dp"
                tools:layout_editor_absoluteY="352dp" />

            <TextView
                android:id="@+id/vegan_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="165dp"
                android:text="@string/Vegan" />

            <ImageView
                android:id="@+id/gluten_free_imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="260dp"
                android:src="@drawable/ic_check"
                app:tint="@color/black" />

            <TextView
                android:id="@+id/gluten_free_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="295dp"
                android:text="@string/gluten_free" />


            <ImageView
                android:id="@+id/healthy_imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:src="@drawable/ic_check"
                app:tint="@color/black" />

            <TextView
                android:id="@+id/healthy_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="35dp"
                android:layout_marginTop="50dp"
                android:text="@string/healthy" />


            <ImageView
                android:id="@+id/diary_free_imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="130dp"
                android:layout_marginTop="50dp"
                android:src="@drawable/ic_check"
                app:tint="@color/black" />

            <TextView
                android:id="@+id/diary_free_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="165dp"
                android:layout_marginTop="50dp"
                android:text="@string/diary_free" />

            <ImageView
                android:id="@+id/cheap_imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="260dp"
                android:layout_marginTop="50dp"
                android:src="@drawable/ic_check" />

            <TextView
                android:id="@+id/cheap_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="295dp"
                android:layout_marginTop="50dp"
                android:text="@string/cheap" />

        </RelativeLayout>


    </LinearLayout>

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="19dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/summary_textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textview"
                android:textSize="16sp" />
        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>
